--- a/src/index.css
+++ b/src/index.css
@@ -111,3 +111,11 @@ button:active {
 .error-text {
   color: #b40e0e;
 }
+
+.centered {
+  margin: 3rem auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
